거지같은 WEB-INF에서 밖으로 views 뺌

--- a/SST/WebContent/css/studynote.css
+++ b/SST/WebContent/css/studynote.css
@@ -26,3 +26,24 @@
 	margin-left: 10px;
 	
 }
+
+.noteListArea{
+	width: 800px;
+	
+}
+
+.noteTable{
+	border: none;
+}
+
+.sn_num{
+	width: 100px;
+}
+
+.sn_title{
+	width: 300px;
+}
+
+.sn_writer{
+	width: 100px;
+}
