스터디 노트 리스트 페이징 영역 CSS 수정 0412 01:01

--- a/SST/WebContent/css/studynote.css
+++ b/SST/WebContent/css/studynote.css
@@ -73,8 +73,34 @@
 
 .noHyper{
 	text-decoration: none;
+	color: #858796;
 }
 
 .noteListFooterArea{
 	margin-top: 30px;
+}
+
+.notePagingArea{
+	margin-top:20px;
+	width:600px;
+	text-align: center;
+}
+
+.pageBtn{
+	text-decoration: none;
+	color: black;
+}
+
+.pageBeforeBtn{
+	text-decoration: none;
+	color: black;
+}
+
+.pageAfterBtn{
+	text-decoration: none;
+	color: black;
+}
+
+.curBtn{
+	background: #858796;
 }
