뭔가 많이 바꿈 문서 편집기,CSS 수정 0412 17:37

--- a/SST/WebContent/css/studynote.css
+++ b/SST/WebContent/css/studynote.css
@@ -62,6 +62,7 @@
 
 .sn_writer{
 	width: 100px;
+}
 
 .sn_row{
 	border-bottom: 1px solid #DCDCDC;
@@ -129,4 +130,8 @@
 .curBtn{
 	background: #858796;
 
+}
+
+.input_contents{
+	min-height: 100%;
 }
