스터디노트 인서트 폼 , CSS 변경 0413 16:13

--- a/SST/WebContent/css/studynote_input.css
+++ b/SST/WebContent/css/studynote_input.css
@@ -19,6 +19,8 @@
 	min-height:300px;
 	border: 1px solid #ebecef;
 	background: white;
+	padding: 20px;
+	color: black;
 }
 
 .studyNoteFormWrap{
@@ -31,4 +33,8 @@
 
 .formBtnWrap{
 	margin-top: 20px;
+}
+
+.input_contents_wrap{
+	
 }
